--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             </a>-->
             <a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>
             <h1 class="title"><img src="images/header-logo.png" alt=""></h1>
-            <div class="lan2" style="position: absolute;right: 0;">
-                <select id="language" style="font-size: 12px;background: #000;color: #fff;margin-top: 15px;margin-right: 10px;">
-                    <option id="zh-CN" value="zh-CN" style="color: #fff;">中文简体</option>
-                    <option id="en" value="en" style="color: #fff;">English</option>
+            <div class="lan2">
+                <select id="language" >
+                    <option id="zh-CN" value="zh-CN" >中文简体</option>
+                    <option id="en" value="en" >English</option>
                 </select>
             </div>
         </header>
@@ -298,9 +298,9 @@
 <div class="menu-wrap">
     <nav class="menu">
         <div class="link-list">
-            <a href="#1"><i class="iconfont icon-youjian"></i><span>邮件(2)</span></a>
-            <a href="#2"><i class="iconfont icon-kefu"></i><span>在线客服</span></a>
-            <a href="#3"><i class="iconfont icon-bangzhu"></i><span>帮助</span></a>
+            <a href="#1"><i class="iconfont icon-youjian"></i><span data-i18n-text="floatMail">邮件</span>(2)</a>
+            <a href="#2"><i class="iconfont icon-kefu"></i><span data-i18n-text="floatService">在线客服</span></a>
+            <a href="#3"><i class="iconfont icon-bangzhu"></i><span data-i18n-text="floatHelp">帮助</span></a>
         </div>
     </nav>
 </div>
