--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="notice">
                 <i class="fl icon-notice"></i>
                 <ul>
-                    <li><a href="notice-detail.html">全新捕鱼王上线，百倍奖金等您拿百倍奖金等您拿百倍奖金等您拿！</a></li>
+                    <li><a href="notice-detail.html">New fishing king online, 100 times bonus waiting for you to take 100 times bonus waiting for you to take 100 times bonus waiting for you to take!</a></li>
                 </ul>
             </div>
             <!-- /.notice -->
@@ -295,7 +295,7 @@
 <!--/. 公告列表弹窗 -->
 
 <!-- 弹出菜单 -->
-<div class="menu-wrap">
+<div class="menu-wrap" >
     <nav class="menu">
         <div class="link-list">
             <a href="#1"><i class="iconfont icon-youjian"></i><span data-i18n-text="floatMail">邮件</span>(2)</a>
@@ -304,7 +304,9 @@
         </div>
     </nav>
 </div>
-<a class="cd-bouncy-nav-trigger" href="#" id="open-button"><i class="iconfont icon-caidan"></i></a>
+<a class="cd-bouncy-nav-trigger" href="#" id="open-button" style="display: none;">
+    <i class="iconfont icon-caidan"></i>
+</a>
 <div class="content-wrap">
     <div class="content-box">
     </div>
