--- a/user-center.html
+++ b/user-center.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="stylesheet" href="css/sm.min.css">
+    <link rel="stylesheet" href="css/sm-extend.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 
 <body>
@@ -28,25 +24,29 @@
             <a class="button button-link button-nav pull-left back" href="index.html" data-transition='slide-out'>
                 <span class="iconfont icon-fanhui c-white"></span>
         </a>
-            <h1 class="title">用户中心</h1>
+            <h1 class="title" data-i18n-text="userCenter">用户中心</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
         <nav class="bar bar-tab">
-            <a class="tab-item external" href="index.html">
-                <span class="icon icon-index"></span>
-                <span class="tab-label">首页</span>
+            <a class="tab-item external " href="index.html">
+                <span class="icon iconfont icon-shouye"></span>
+                <span class="tab-label" data-i18n-text="navHome">首页</span>
             </a>
-            <a class="tab-item external" href="game.html" >
-                <span class="icon icon-game"></span>
-                <span class="tab-label">游戏大厅</span>
+            <a class="tab-item external " href="game.html">
+                <span class="icon iconfont icon-youxi"></span>
+                <span class="tab-label" data-i18n-text="navGames">游戏中心</span>
+            </a>
+            <a class="tab-item external" href="#">
+                <span class="icon iconfont icon-kefu2" ></span>
+                <span class="tab-label" data-i18n-text="navService">客服</span>
             </a>
             <a class="tab-item external" href="onlinepaystart.html">
-                <span class="icon icon-prefer"></span>
-                <span class="tab-label">充值</span>
+                <span class="icon iconfont icon-chongzhi"></span>
+                <span class="tab-label" data-i18n-text="navRecharge">充值</span>
             </a>
             <a class="tab-item external active" href="user-center.html">
-                <span class="icon icon-user"></span>
-                <span class="tab-label">会员中心</span>
+                <span class="icon iconfont icon-members"></span>
+                <span class="tab-label" data-i18n-text="navUserCenter">会员中心</span>
             </a>
         </nav>
         <div class="content">
@@ -66,7 +66,7 @@
                     <span class="user-name">Admin1999</span>
                 </div>
                 <div class="account-info">
-                    <div class="balance">余额(元) <br><span>215004.50</span></div>
+                    <div class="balance"><span data-i18n-text="balance" style="color: #333;">余额</span> <br><span>215004.50</span></div>
                     <div class="header-img">
                         <img src="images/header-img.jpg" alt="">
                         <div class="user-level">
@@ -78,7 +78,7 @@
                         <a id="golden_introduce" href="javascript:void(0)" style="position: absolute;top: -.1rem;right: .4rem;" data-popup=".popup-gold-introduce">
                             <i class="iconfont icon-bangzhu" style="font-size: 1.2rem;background-color: #fff;color: #dd4651;border-radius: 50%"></i>
                         </a>
-                        剩余金币 <br><span> 156218400</span>
+                        <span data-i18n-text="goldCoins" style="color: #333;">剩余金币</span> <br><span> 156218400</span>
                     </div>
                 </div>
             </div>
@@ -86,8 +86,8 @@
 
             <!-- 按钮区 -->
             <div class="center-btn-wrap">
-                    <a class="center-btn" href="onlinepaystart.html">在线充值</a>
-                    <a class="center-btn" href="withdraw.html">申请提现</a>
+                    <a class="center-btn" href="onlinepaystart.html" data-i18n-text="rechargeOnline">在线充值</a>
+                    <a class="center-btn" href="withdraw.html" data-i18n-text="withdraw">申请提现</a>
             </div>
             <!-- /.按钮区 -->
 
@@ -97,14 +97,14 @@
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="user_info.html">
-                                <div class="item-media"><i class="center-list-icon-info"></i><span>用户资料</span></div>
+                                <div class="item-media"><i class="center-list-icon-info"></i><span data-i18n-text="UserInformation">用户资料</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="change_password.html">
-                                <div class="item-media"><i class="center-list-icon-pwd"></i><span>密码管理</span></div>
+                                <div class="item-media"><i class="center-list-icon-pwd"></i><span data-i18n-text="PasswordManagement">密码管理</span></div>
                             </a>
                         </div>
                     </li>
@@ -112,49 +112,49 @@
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="onlinepaystart.html">
-                                <div class="item-media"><i class="center-list-icon-deposit"></i><span>存款</span></div>
+                                <div class="item-media"><i class="center-list-icon-deposit"></i><span data-i18n-text="Deposit">存款</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="withdraw.html">
-                                <div class="item-media"><i class="center-list-icon-cash"></i><span>提现</span></div>
+                                <div class="item-media"><i class="center-list-icon-cash"></i><span data-i18n-text="withdraw">提现</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="firststage.html">
-                                <div class="item-media"><i class="center-list-icon-apply"></i><span>优惠申请</span></div>
+                                <div class="item-media"><i class="center-list-icon-apply"></i><span data-i18n-text="PreferentialApplication">优惠申请</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="records.html">
-                                <div class="item-media"><i class="center-list-icon-records"></i><span>记录</span></div>
+                                <div class="item-media"><i class="center-list-icon-records"></i><span data-i18n-text="records">记录</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="#">
-                                <div class="item-media"><i class="center-list-icon-redpacket"></i><span>红包</span></div>
+                                <div class="item-media"><i class="center-list-icon-redpacket"></i><span data-i18n-text="RedEnvelopes">红包</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="#">
-                                <div class="item-media"><i class="center-list-icon-transfer"></i><span>游戏转账</span></div>
+                                <div class="item-media"><i class="center-list-icon-transfer"></i><span data-i18n-text="GameTransfer">游戏转账</span></div>
                             </a>
                         </div>
                     </li>
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="user-msg.html">
-                                <div class="item-media"><i class="center-list-icon-msg"></i><span>我的消息</span></div>
+                                <div class="item-media"><i class="center-list-icon-msg"></i><span data-i18n-text="MyMessages">我的消息</span></div>
                             </a>
                         </div>
                     </li>
@@ -163,7 +163,7 @@
             <!-- /.列表 -->
 
             <div class="content-block">
-                <p><a href="#" class="confirm-ok button button-big button-round button-fill button-warning">退出登录 </a></p>
+                <p><a href="#" class="confirm-ok button button-big button-round button-fill button-warning" data-i18n-text="SignOut">退出登录 </a></p>
             </div>
 
         </div><!-- /. content -->
@@ -209,14 +209,19 @@
 
 
 
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<!--<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>-->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
+
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 <script>
     $(function(){
         // 20200331
